[Extensions Bindings] Allow '' to forward to calling extension in messaging

In extension messaging, if the ID is omitted, we treat it as a message
to the extension itself (e.g., from a content script to a background
page).

With JS bindings, we consider anything false-y to be an omitted ID,
which is different than in the rest of the bindings system (where if
an argument is supplied, it is used). Unfortunately, it seems there
are some libraries relying on the current behavior.

Allow '' to be treated as an extension messaging itself for backward
compatibility.  Do not extend this to all false-y values, others of
which would be sufficiently more strange.

Add unittests for the same.

Bug: 823577

Change-Id: I8c0eaa66da39512af4a85ef11cb3e3979d8d6462
Reviewed-on: https://chromium-review.googlesource.com/973694
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545445}
Former-commit-id: e4eb1d9118b0a1647ef43228075eeb802cece6d8