extensions/renderer/messaging_util.cc
@@ -196,9 +196,17 @@ bool GetTargetExtensionId(ScriptContext* script_context,
                           std::string* target_out,
                           std::string* error_out) {
   DCHECK(!v8_target_id.IsEmpty());
+  // Argument parsing should guarantee this is null or a string before we reach
+  // this point.
+  DCHECK(v8_target_id->IsNull() || v8_target_id->IsString());
 
   std::string target_id;
-  if (v8_target_id->IsNull()) {
+  // If omitted, we use the extension associated with the context.
+  // Note: we deliberately treat the empty string as omitting the id, even
+  // though it's not strictly correct. See https://crbug.com/823577.
+  if (v8_target_id->IsNull() ||
+      (v8_target_id->IsString() &&
+       v8_target_id.As<v8::String>()->Length() == 0)) {
     if (!script_context->extension()) {
       *error_out =
           base::StringPrintf(kExtensionIdRequiredErrorTemplate, method_name);
